# adhd

./: .gitignore  README.md  adhd.cabal  config.dhall
.forgejo/workflows/: build.yaml
src/: Main.hs
src/ADHD/: Config.hs  DHCP.hs  Logging.hs
src/ADHD/DHCP/: Generator.hs  Raw.hs  Types.hs
src/ADHD/DHCP/Raw/: Decoder.hs  Encoder.hs
